issue#144 file name aligned on upload box

--- a/wp-content/themes/minyawns/css/photo-upload.css
+++ b/wp-content/themes/minyawns/css/photo-upload.css
@@ -45,18 +45,15 @@
 }
 
 #upload ul li{
-
     /*background-color:#333639;*/
 	border:1px solid #ccc;
     /*background-image:-webkit-linear-gradient(top, #333639, #303335);
     background-image:-moz-linear-gradient(top, #333639, #303335);
     background-image:linear-gradient(top, #333639, #303335);
-
     border-top:1px solid #3d4043;
     border-bottom:1px solid #2b2e31;*/
     /*padding:15px;*/
-    height: 80px;
-
+    /*height: 80px;*/
     position: relative;
 	border-radius:3px;
 }
@@ -66,31 +63,25 @@
 }
 
 #upload ul li  .file_details{
-    
-    overflow: hidden;
-    white-space: nowrap;
     color: #000;
     font-size: 16px; 
-    position: absolute;
-    top: 0px;
-    left: 40%;
+    margin-left: 40%;
+    word-wrap:break-word;
+    padding:0 10px;
 }
 
-#upload ul li   .process_errormsg{
-    font-size: 12px; 
-    color: #F65151;
-    position: absolute;
-    top: 50px;
-	left:40%;
-   
-}
+#upload ul li   .process_errormsg,
 #upload ul li   .process_successmsg{
     font-size: 12px; 
-    color: #79B91E;
-    position: absolute;
-    top: 50px;
-	left:40%;
-   
+    margin-left: 40%;
+    padding: 0 10px;
+    word-wrap:break-word;
+}
+#upload ul li   .process_errormsg{
+    color: #F65151;
+}
+#upload ul li   .process_successmsg{
+    color:#79B91E;
 }
 #upload ul li i{
     font-weight: normal;
